Provide e2e tests to media module

--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -103,30 +103,37 @@
                     {% block sw_media_quickinfo_metadata_content %}
                     <dl class="sw-media-quickinfo__collapse-content">
                         {% block sw_media_quickinfo_metadata_content_base %}
-                            <sw-media-quickinfo-metadata-item label-name="name"
+                            <sw-media-quickinfo-metadata-item class="sw-media-quickinfo-metadata-name"
+                                label-name="name"
                                 :value="this.item.name">
                             </sw-media-quickinfo-metadata-item>
-                            <sw-media-quickinfo-metadata-item label-name="mimeType"
+                            <sw-media-quickinfo-metadata-item class="sw-media-quickinfo-metadata-mimeType"
+                                label-name="mimeType"
                                 :value="this.item.mimeType">
                             </sw-media-quickinfo-metadata-item>
-                            <sw-media-quickinfo-metadata-item label-name="fileSize"
+                            <sw-media-quickinfo-metadata-item class="sw-media-quickinfo-metadata-size"
+                                label-name="fileSize"
                                 :value="fileSize">
                             </sw-media-quickinfo-metadata-item>
-                            <sw-media-quickinfo-metadata-item label-name="createdAt"
+                            <sw-media-quickinfo-metadata-item class="sw-media-quickinfo-metadata-createdAt"
+                                label-name="createdAt"
                                 :value="createdAt">
                             </sw-media-quickinfo-metadata-item>
-                            <sw-media-quickinfo-metadata-item label-name="url"
+                            <sw-media-quickinfo-metadata-item class="sw-media-quickinfo-metadata-url"
+                                label-name="url"
                                 :value="this.item.url">
                             </sw-media-quickinfo-metadata-item>
                         {% endblock %}
 
                         <template v-if="this.item.metaData.typeName === 'image'">
                             {% block sw_media_quickinfo_metadata_content_image %}
-                                <sw-media-quickinfo-metadata-item label-name="width"
+                                <sw-media-quickinfo-metadata-item class="sw-media-quickinfo-metadata-width"
+                                    label-name="width"
                                     :value="this.item.metaData.type.width"
                                     suffix="px">
                                 </sw-media-quickinfo-metadata-item>
-                                <sw-media-quickinfo-metadata-item label-name="height"
+                                <sw-media-quickinfo-metadata-item class="sw-media-quickinfo-metadata-height"
+                                    label-name="height"
                                     :value="this.item.metaData.type.height"
                                     suffix="px">
                                 </sw-media-quickinfo-metadata-item>
@@ -135,15 +142,18 @@
 
                         <template v-if="this.item.metaData.typeName === 'video'">
                             {% block sw_media_quickinfo_metadata_content_video %}
-                                <sw-media-quickinfo-metadata-item label-name="width"
+                                <sw-media-quickinfo-metadata-item class="sw-media-quickinfo-metadata-width"
+                                    label-name="width"
                                     :value="this.item.metaData.type.width"
                                     suffix="px">
                                 </sw-media-quickinfo-metadata-item>
-                                <sw-media-quickinfo-metadata-item label-name="height"
+                                <sw-media-quickinfo-metadata-item class="sw-media-quickinfo-metadata-height"
+                                    label-name="height"
                                     :value="this.item.metaData.type.height"
                                     suffix="px">
                                 </sw-media-quickinfo-metadata-item>
-                                <sw-media-quickinfo-metadata-item label-name="frameRate"
+                                <sw-media-quickinfo-metadata-item  class="sw-media-quickinfo-metadata-frameRate"
+                                    label-name="frameRate"
                                     :value="this.item.metaData.type.frameRate"
                                     suffix="Hz">
                                 </sw-media-quickinfo-metadata-item>
@@ -152,13 +162,16 @@
 
                         <template v-if="this.item.metaData.typeName === 'document'">
                             {% block sw_media_quickinfo_metadata_content_document %}
-                                <sw-media-quickinfo-metadata-item label-name="pages"
+                                <sw-media-quickinfo-metadata-item  class="sw-media-quickinfo-metadata-pages"
+                                    label-name="pages"
                                     :value="this.item.metaData.type.pages">
                                 </sw-media-quickinfo-metadata-item>
-                                <sw-media-quickinfo-metadata-item label-name="title"
+                                <sw-media-quickinfo-metadata-item  class="sw-media-quickinfo-metadata-title"
+                                    label-name="title"
                                     :value="this.item.metaData.type.title">
                                 </sw-media-quickinfo-metadata-item>
-                                <sw-media-quickinfo-metadata-item label-name="creator"
+                                <sw-media-quickinfo-metadata-item  class="sw-media-quickinfo-metadata-creator"
+                                    label-name="creator"
                                     :value="this.item.metaData.type.creator">
                                 </sw-media-quickinfo-metadata-item>
                             {% endblock %}
