--- a/Resources/administration/src/app/component/media/sw-media-modal-delete/sw-media-modal-delete.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-delete/sw-media-modal-delete.html.twig
@@ -18,7 +18,7 @@
                 {% endblock %}
 
                 {% block sw_media_modal_delete_confirm_button %}
-                    <sw-button @click="deleteSelection($event)" size="small" variant="primary">
+                    <sw-button class="sw-media-modal-delete__confirm" @click="deleteSelection($event)" size="small" variant="primary">
                         {{ $tc('global.sw-media-modal-delete.modalButtonDelete') }}
                     </sw-button>
                 {% endblock %}
