--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -148,6 +148,7 @@
                                             :selectable="true"
                                             :editable="false"
                                             :items="mediaItems"
+                                            dragSelectorClass="sw-media-grid-media-item"
                                             ref="mediaGrid"
                                             v-on="mediaMediaGridListener"
                                             :gridColumnWidth="catalogIconSize">
