--- a/Resources/administration/src/app/component/media/sw-media-grid-catalog-item/sw-media-grid-catalog-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-catalog-item/sw-media-grid-catalog-item.html.twig
@@ -1,25 +1,46 @@
-{% block sw_media_grid_item_selection_identifier %}{% endblock %}
+{% block sw_media_grid_catalog_item %}
+    <sw-media-grid-item @sw-media-grid-item-clicked="viewCatalogContent" class="sw-media-grid-catalog-item">
 
-{% block sw_media_grid_item_preview %}
-    <div class="sw-media-grid-item__svg-container">
-        <sw-icon class="sw-media-grid-item__catalog-item"
-            name="folder-thumbnail"
-            multicolor
-            size="64px">
-        </sw-icon>
-    </div>
-{% endblock %}
+        {% block sw_media_grid_catalog_item_slot_preview %}
+            <template slot="media-item-preview">
+                {% block sw_media_grid_catalog_item_preview %}
+                    <div class="sw-media-grid-catalog-item__svg-container">
+                        {% block sw_media_grid_catalog_item_placeholder %}
+                            <sw-icon class="sw-media-grid-catalog-item__catalog-item"
+                                     name="folder-thumbnail"
+                                     multicolor
+                                     size="64px">
+                            </sw-icon>
+                        {% endblock %}
+                    </div>
+                {% endblock %}
+            </template>
+        {% endblock %}
 
-{% block sw_media_grid_item_context_items%}
-    {% block sw_media_grid_catalog_item_show_content_button %}
-        <sw-context-menu-item :routerLink="{ name: 'sw.media.catalog-content', params: { id: item.id }, query: {limit: 25, page: 1} }">
-            {{ $tc('sw-media.catalogItem.showCatalogContent') }}
-        </sw-context-menu-item>
-    {% endblock %}
+        {% block sw_media_grid_catalog_item_slot_item_name %}
+            <template slot="media-item-name">
+                {% block sw_media_grid_catalog_item_name %}
+                    {{ catalog.name }}
+                {% endblock %}
+            </template>
+        {% endblock %}
 
-    {% block sw_media_grid_catalog_item_show_catalog_button %}
-        <sw-context-menu-item :routerLink="{ name: 'sw.catalog.detail', params: { id: item.id } }">
-            {{ $tc('sw-media.catalogItem.showCatalogDetails') }}
-        </sw-context-menu-item>
-    {% endblock %}
+        {% block sw_media_grid_catalog_item_slot_context_menu %}
+            <template slot="media-item-context-menu">
+                {% block sw_media_grid_catalog_item_context_menu %}
+                    {% block sw_media_grid_catalog_item_show_content_button %}
+                        <sw-context-menu-item :routerLink="{ name: 'sw.media.catalog-content', params: { id: catalog.id }, query: {limit: 25, page: 1} }">
+                            {{ $tc('sw-media.catalogItem.showCatalogContent') }}
+                        </sw-context-menu-item>
+                    {% endblock %}
+
+                    {% block sw_media_grid_catalog_item_show_catalog_button %}
+                        <sw-context-menu-item :routerLink="{ name: 'sw.catalog.detail', params: { id: catalog.id } }">
+                            {{ $tc('sw-media.catalogItem.showCatalogDetails') }}
+                        </sw-context-menu-item>
+                    {% endblock %}
+                {% endblock %}
+            </template>
+        {% endblock %}
+    </sw-media-grid-item>
 {% endblock %}
