--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.html.twig
@@ -1,33 +1,26 @@
 {%  block sw_media_grid_item %}
-    <div class="sw-media-grid-item" :class="mediaItemClasses" v-on="gridItemListeners">
+    <div class="sw-media-grid-item" :class="mediaItemClasses" @click.stop="emitClickedEvent">
         {% block sw_media_grid_item_content %}
             <div class="sw-media-grid-item__content" :class="mediaItemContentClasses">
-                {% block sw_media_grid_item_selection_condition %}
-                    <div class="sw-media-grid-item__selected-indicator"
-                         :class="selectedIndicatorClasses"
-                         v-if="containerOptions.selectable && !isListItemPreview">
-
-                        {% block sw_media_grid_item_selected_indicator %}
-                            <sw-field type="checkbox" :value="selected" @click.self="doSelectItem"></sw-field>
-                        {% endblock %}
-                    </div>
+                {% block sw_media_grid_item_preview %}
+                    <slot name="media-item-preview"></slot>
                 {% endblock %}
-
-                {% block sw_media_grid_item_preview %}{% endblock %}
 
                 {% block sw_media_grid_item_name_container %}
                     <div class="sw-media-grid-item__name-container">
                         {% block sw_media_grid_item_name %}
-                            <div class="sw-media-grid-item__name" :title="itemTitle">
-                                {{ itemTitle }}
-                            </div>
+
+                            <slot name="media-item-name"></slot>
                         {% endblock %}
                     </div>
                 {% endblock %}
 
                 {% block sw_media_grid_item_context_menu %}
                     <sw-context-button v-if="showContextMenuButton" ref="swContextButton">
-                        {% block sw_media_grid_item_context_items%}{% endblock %}
+                        {% block sw_media_grid_item_context_items%}
+
+                            <slot name="media-item-context-menu"></slot>
+                        {% endblock %}
                     </sw-context-button>
                 {% endblock %}
             </div>
