--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
@@ -1,9 +1,8 @@
 @import "~less/variables";
 @import "~less/mixins";
 
-@sw-media-grid-item-color-selected:          @color-shopware-blue;
 @sw-media-grid-media-color-unselected:       @color-kashmir;
-@sw-media-grid-item-pseudo-padding:          10px;
+@sw-media-grid-item-color-selected:          @color-shopware-blue;
 @sw-media-grid-item-border-radius:           @border-radius-default;
 @sw-media-grid-item-small-font-size:         @font-size-small;
 
@@ -16,19 +15,10 @@
     color: @sw-media-grid-media-color-unselected;
 
     &.is--grid {
-        padding: 10px;
-    }
-
-    &.is--selected {
-        color: @sw-media-grid-item-color-selected;
-
-        .sw-media-grid-item__content.is--list {
-            border: 1px solid @sw-media-grid-item-color-selected;
-        }
+      padding: 10px;
     }
 
     .sw-context-button {
-
         .sw-context-button__button {
             height: 18px;
             padding: 0 4px;
@@ -70,28 +60,25 @@
         grid-template-columns: 50px minmax(60px, 1fr);
         grid-auto-flow: column;
         align-items: center;
-    }
 
-    .sw-media-grid-item__name {
-        font-size: @sw-media-grid-item-small-font-size;
-        max-width: 100%;
-        .truncate();
-    }
-
-    .sw-media-grid-item__selected-indicator {
-        visibility: hidden;
-        position: absolute;
-        top: @sw-media-grid-item-pseudo-padding;
-        left: @sw-media-grid-item-pseudo-padding;
-    }
-
-    &:hover {
-        .sw-media-grid-item__selected-indicator {
-            visibility: visible;
+        .sw-media-preview {
+            width: 40px;
+            height: 40px;
         }
     }
 
-    .selected-indicator--visible {
-        visibility: visible;
+    .sw-media-grid-item__name-container {
+        font-size: @sw-media-grid-item-small-font-size;
+        max-width: 100%;
+        font-weight: 600;
+        .truncate();
+    }
+
+    &.is--selected {
+        color: @sw-media-grid-item-color-selected;
+
+        .sw-media-grid-item__content.is--list {
+            border: 1px solid @sw-media-grid-item-color-selected;
+        }
     }
 }
