--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.html.twig
@@ -48,6 +48,7 @@
                                             :editable="false"
                                             :selectable="true"
                                             :items="mediaItems"
+                                            dragSelectorClass="sw-media-grid-media-item"
                                             ref="mediaGrid"
                                             v-on="mediaMediaGridListener">
                                         </sw-media-grid>
