NEXT-381 - Remove superfluous semicolons

--- a/Resources/administration/src/app/component/form/sw-field/sw-field.less
+++ b/Resources/administration/src/app/component/form/sw-field/sw-field.less
@@ -166,7 +166,7 @@
         &:-moz-submit-invalid,
         &:-moz-ui-invalid {
             box-shadow: none;
-        };
+        }
 
         &:focus {
             border-color: @sw-field-color-focus;
@@ -247,7 +247,7 @@
             &:-moz-submit-invalid,
             &:-moz-ui-invalid {
                 box-shadow: none;
-            };
+            }
 
             &:focus {
                 border-color: @sw-field-color-focus;
