--- a/Resources/views/administration/index.html.twig
+++ b/Resources/views/administration/index.html.twig
@@ -8,6 +8,8 @@
         Backend (c) shopware AG
     </title>
 
+    <link rel="stylesheet" href="{{ asset('bundles/administration/static/css/vendors.css') }}?{{ 'now'|date('U') }}">
+    <link rel="stylesheet" href="{{ asset('bundles/administration/static/css/components.css') }}?{{ 'now'|date('U') }}">
     <link rel="stylesheet" href="{{ asset('bundles/administration/static/css/app.css') }}?{{ 'now'|date('U') }}">
     {% block administration_stylesheets %}{% endblock %}
 </head>
@@ -17,7 +19,9 @@
 
 {% block administration_templates %}{% endblock %}
 
+<script src="{{ asset('bundles/administration/static/js/vendors.js') }}?{{ 'now'|date('U') }}"></script>
 <script src="{{ asset('bundles/administration/static/js/commons.js') }}?{{ 'now'|date('U') }}"></script>
+<script src="{{ asset('bundles/administration/static/js/components.js') }}?{{ 'now'|date('U') }}"></script>
 <script src="{{ asset('bundles/administration/static/js/app.js') }}?{{ 'now'|date('U') }}"></script>
 
 {# Plugins #}
