--- a/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-list/sw-settings-language-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-language/page/sw-settings-language-list/sw-settings-language-list.html.twig
@@ -99,7 +99,9 @@
                                                         {% endblock %}
 
                                                         {% block sw_settings_language_list_columns_actions_delete %}
-                                                            <sw-context-menu-item variant="danger" @click="onDelete(item.id)">
+                                                            <sw-context-menu-item v-if="!isDefault(item.id)"
+                                                                                  variant="danger"
+                                                                                  @click="onDelete(item.id)">
                                                                 {{ $tc('sw-settings-language.list.buttonDelete') }}
                                                             </sw-context-menu-item>
                                                         {% endblock %}
