--- a/Resources/views/administration/index.html.twig
+++ b/Resources/views/administration/index.html.twig
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-        Shopware Administration {Shopware\Core::VERSION} {Shopware\Core::VERSION_TEXT} (Rev. {Shopware\Core::REVISION}) -
-        Backend (c) shopware AG
+        Shopware Administration (c) shopware AG
     </title>
 
     <link rel="stylesheet" href="{{ asset('bundles/administration/static/css/vendors.css') }}?{{ 'now'|date('U') }}">
