--- a/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.less
@@ -1,4 +1,5 @@
 @import "~less/variables";
+@import "~less/mixins";
 
 @sw-media-grid-media-item-border-radius-input: @border-radius-default;
 @sw-media-grid-media-color-input-border:       @color-steam-cloud;
@@ -23,5 +24,9 @@
 
     .selected-indicator--visible {
         visibility: visible;
+    }
+
+    .sw-media-grid-media-item__name {
+        .truncate()
     }
 }
