--- a/Resources/administration/src/app/component/media/sw-media-grid-catalog-item/sw-media-grid-catalog-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid-catalog-item/sw-media-grid-catalog-item.less
@@ -1,4 +1,5 @@
 @import "~less/variables";
+@import "~less/mixins";
 
 @sw-media-grid-catalog-item-border:        1px solid @color-steam-cloud;
 @sw-media-grid-catalog-item-border-radius: @border-radius-default;
@@ -22,5 +23,9 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+    }
+
+    .sw-media-grid-catalog-item__name {
+        .truncate();
     }
 }
