Improve styling of multiple quickinfo

--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.less
@@ -13,8 +13,11 @@
 @sw-media-grid-color-white:                  @color-white;
 
 .sw-media-grid-item {
-    padding: 10px;
     color: @sw-media-grid-media-color-unselected;
+
+    &.is--grid {
+        padding: 10px;
+    }
 
     &.is--selected {
         color: @sw-media-grid-item-color-selected;
@@ -61,7 +64,7 @@
         border: 1px solid @sw-media-grid-item-color-border;
         border-radius: @sw-media-grid-item-border-radius;
         padding: 2px;
-        margin: 0 5px;
+        margin: 5px 0;
         display: grid;
 
         grid-template-columns: 50px minmax(60px, 1fr);
