--- a/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
@@ -14,7 +14,7 @@
         @keydown.esc="cancelInlineEdit"
         @blur="cancelInlineEditFromBlur">
 
-    <div v-else class="sw-media-grid-item__name">
+    <div v-else class="sw-media-grid-item__name" :title="itemTitle">
         {{ itemTitle }}
     </div>
 {% endblock %}
