--- a/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.less
+++ b/Resources/administration/src/app/component/media/sw-media-grid/sw-media-grid.less
@@ -10,12 +10,17 @@
 
     .sw-media-grid__content {
         display: grid;
-        grid-column-gap: 15px;
-        grid-row-gap: 10px;
     }
 
-    .sw-media-grid__content-cell:hover {
-        background-color: @media-grid-cell-color-highlight;
-        border-radius: @media-grid-border-radius-content-cell;
+    &.is--grid {
+        .sw-media-grid__content {
+            grid-column-gap: 15px;
+            grid-row-gap: 10px;
+        }
+
+        .sw-media-grid__content-cell:hover {
+            background-color: @media-grid-cell-color-highlight;
+            border-radius: @media-grid-border-radius-content-cell;
+        }
     }
 }
