--- a/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-item/sw-media-grid-item.html.twig
@@ -18,7 +18,7 @@
                 {% block sw_media_grid_item_name_container %}
                     <div class="sw-media-grid-item__name-container">
                         {% block sw_media_grid_item_name %}
-                            <div class="sw-media-grid-item__name">
+                            <div class="sw-media-grid-item__name" :title="itemTitle">
                                 {{ itemTitle }}
                             </div>
                         {% endblock %}
