--- a/Resources/views/administration/index.html.twig
+++ b/Resources/views/administration/index.html.twig
@@ -9,7 +9,11 @@
 
     {% block administration_favicons %}
         <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('bundles/administration/static/img/favicon/apple-touch-icon.png') }}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('bundles/administration/static/img/favicon/favicon-16x16.png') }}">
         <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('bundles/administration/static/img/favicon/favicon-32x32.png') }}">
+        <link rel="icon" type="image/png" sizes="192x192" href="{{ asset('bundles/administration/static/img/favicon/android-chrome-192x192.png') }}">
+        <link rel="icon" type="image/png" sizes="256x256" href="{{ asset('bundles/administration/static/img/favicon/android-chrome-256x256.png') }}">
+        <meta name="msapplication-TileImage" content="{{ asset('bundles/administration/static/img/favicon/mstile-150x150.png') }}">
         <meta name="msapplication-TileColor" content="#189eff">
         <meta name="theme-color" content="#189eff">
     {% endblock %}
