--- a/Resources/administration/src/app/component/media/sw-media-modal-delete/sw-media-modal-delete.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-delete/sw-media-modal-delete.html.twig
@@ -1,12 +1,11 @@
 {% block sw_media_modal_delete %}
-    <sw-modal v-if="showModal"
-              variant="small"
+    <sw-modal variant="small"
               class="sw-media-modal-delete"
               @closeModal="closeDeleteModal($event)"
-              :title="$tc('sw-media.modalDelete.modalHeader')">
+              :title="$tc('global.sw-media-modal-delete.modalHeader')">
 
         {% block sw_media_modal_body %}
-            {{ $tc('sw-media.modalDelete.deleteMessage', itemsToDelete.length, { mediaName: itemsToDelete[0].name, count: itemsToDelete.length }) }}
+            {{ $tc('global.sw-media-modal-delete.deleteMessage', itemsToDelete.length, { mediaName: itemsToDelete[0].name, count: itemsToDelete.length }) }}
         {% endblock %}
 
         {% block sw_media_modal_footer %}
@@ -14,13 +13,13 @@
 
                 {% block sw_media_modal_delete_cancel_button %}
                     <sw-button @click="closeDeleteModal($event)" size="small">
-                        {{ $tc('sw-media.modalDelete.modalButtonAbort') }}
+                        {{ $tc('global.sw-media-modal-delete.modalButtonAbort') }}
                     </sw-button>
                 {% endblock %}
 
                 {% block sw_media_modal_delete_confirm_button %}
                     <sw-button @click="deleteSelection($event)" size="small" variant="primary">
-                        {{ $tc('sw-media.modalDelete.modalButtonDelete') }}
+                        {{ $tc('global.sw-media-modal-delete.modalButtonDelete') }}
                     </sw-button>
                 {% endblock %}
 
