--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.html.twig
@@ -174,7 +174,7 @@
                         <div class="sw-media-catalog__sidebar">
                             <sw-media-sidebar
                                 :items="selectedItems"
-                                v-on="mediaSidebarListener"
+                                @sw-media-sidebar-items-delete="handleMediaGridItemDelete"
                                 ref="mediaSidebar">
                             </sw-media-sidebar>
                         </div>
@@ -188,14 +188,6 @@
 
             {% block sw_media_catalog_empty_state %}
                 <sw-empty-state v-else-if="!isLoading && !total" :title="$tc('sw-media.catalog.messageEmpty')"></sw-empty-state>
-            {% endblock %}
-
-            {% block sw_media_catalog_modal_delete %}
-                <sw-media-modal-delete
-                   :itemsToDelete="selectionToDelete"
-                   @sw-media-modal-delete-close="closeDeleteModal"
-                   @sw-media-modal-delete-delete="deleteSelection">
-                </sw-media-modal-delete>
             {% endblock %}
         </template>
     </sw-page>
